--- a/SGEG/SGEGService/SGEGService.csproj
+++ b/SGEG/SGEGService/SGEGService.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\Product.cs" />
+    <Compile Include="Data\User.cs" />
     <Compile Include="ISGEGService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SGEGService.cs" />
