--- a/SGEG/SGEGService/app.config
+++ b/SGEG/SGEGService/app.config
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <connectionStrings>
+    <add name="SGEGServiceContext"
+   connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=SGEGData;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\SGEGData.mdf"
+   providerName="System.Data.SqlClient"/>
+  </connectionStrings>
+  
     <system.serviceModel>
         <behaviors>
             <serviceBehaviors>
