CreateTables, Projet de tests fonctionnelles avec NUnit, Category Model/Repo/Unit Tests.

--- a/SGEG/SGEGService/app.config
+++ b/SGEG/SGEGService/app.config
@@ -2,7 +2,7 @@
 <configuration>
   <connectionStrings>
     <add name="SGEGServiceContext"
-   connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=SGEGData;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\SGEGData.mdf"
+   connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\LL\Projets\SGEG\Code\SGEG\SGEGService\DB\SGEGData.mdf;Integrated Security=True;Connect Timeout=30"
    providerName="System.Data.SqlClient"/>
   </connectionStrings>
   
