--- a/WebApp/WebApp/appsettings.json
+++ b/WebApp/WebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\ledfre01\\Documents\\Perso\\Db\\webAppData.mdf;Integrated Security=True;Connect Timeout=30"
+    "DefaultConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\frede\\Documents\\Projets\\SGEG\\WebApp\\Data\\SGEGData.mdf;Integrated Security=True;Connect Timeout=30"
   },
   "Logging": {
     "LogLevel": {
